--- a/marg_vs_divorce_viz.ipynb
+++ b/marg_vs_divorce_viz.ipynb
@@ -89,6 +89,24 @@
     "options(repr.plot.width = 11, repr.plot.height = 8)\n",
     "plot_grid(marg_vs_time, divorce_rate_vs_time, ncol = 1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d4fc1229-0a95-4cd9-926f-cbbd76f82912",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Hello!\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello!\")"
+   ]
   }
  ],
  "metadata": {
